--- a/page2_versenotes.css
+++ b/page2_versenotes.css
@@ -1,9 +1,12 @@
 body {
-    position: relative;
+    position: fixed;
     display: flex;
+    top: 0;
+    left: 0;
     font-size: 1.5em;
     background-color: whitesmoke;
     height: 100vh;
+    width: 100%;
 }
 body * {
     box-sizing: border-box;
@@ -13,16 +16,12 @@ body * {
     display: flex;
     flex-direction: column;
     font-size: 0.8em;
-    /* min-width: fit-content; */
-    /* max-width: 200px; */
     height: 100%;
     border-right: 2px solid black;
 }
 #col2 {
-    position: relative;
     height: 100%;
     width: 100%;
-    position: relative;
     overflow-y: auto;
     margin-bottom: 100px;
 }
