--- a/bibleApp.css
+++ b/bibleApp.css
@@ -545,7 +545,8 @@ span.vmultiple.noted code #verse_notes_button {
     min-height: var(--minHeighWidth-leftside_btns);
     width:var(--width-sidebuttons)!important;
     height:var(--width-sidebuttons);
-    padding: 6px 2px;
+    /* padding: 6px 2px; */
+    padding: 0;
     font-size: 22.5px;
     font-size:calc(var(--width-sidebuttons)*0.65)!important;
     display: flex;
@@ -1314,11 +1315,11 @@ summary {
     cursor: pointer;
     font-weight:900;
 }
-.hidesearchparameters>*:not(div),
+/* .hidesearchparameters>*:not(div),
 .hidesearchparameters #searchprametersbtnholder,
 .hidesearchparameters #searchdiv_fixed {
     display: none !important;
-}
+} */
 #searchPreviewFixed {
     position: relative;
     height: 100%;
@@ -1362,6 +1363,12 @@ summary {
 }
 .darkmode #searchPreviewFixed .chptheading.dhid::before {
     background: url(images/white-arrow-down-svgrepo-com.svg) center no-repeat;
+}
+#showonlysearchinput.active_button::before {
+    content:'+';
+}
+#showonlysearchinput:not(.active_button)::before {
+    content:'-';
 }
 #searchdiv_fixed {
     display: flex;
