--- a/page2_versenotes.css
+++ b/page2_versenotes.css
@@ -292,3 +292,13 @@ td, tr {
 .slideoutofview, #show_crossref_comments {
     display: none;
 }
+.verse:not(.v_accented) .eng2grk::after {
+    content: attr(translation);
+    font-size: 75%;
+    line-height: 0;
+    position: relative;
+    vertical-align: baseline;
+    top: -0.5em;
+    font-style: italic;
+    color: crimson;
+}
